# prompts-injection-defense

./: .env.example  .gitignore  README.md  available_models.txt  pyproject.toml  requirements.txt
"/home/harrylee/projects/prompt-injection-defense/scripts/: quick_stats.py"
configs/: models.yaml  models_b1_nex.yaml
data/: smoke_cases.jsonl
scripts/: b3_v2_check.py  check_b3_progress.py  check_b3_raw.py  compare_experiments.py  final_report.py  list_models.py  quick_stats.sh  report_baseline.py  update_adjudicator_prompt.py  verify_b1.py
src/pi_defense/: canary.py  clients.py  prompts.py  runner.py  schemas.py  scoring.py
src/pi_defense.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/pi_defense/generator/: __init__.py  __main__.py  base_tasks.py  benign.py  direct.py  indirect.py  pipeline.py
src/pi_defense/workflows/: b0.py  b1.py  b2.py  b3.py
tests/: speed_test_b1.py  test_canary.py  test_generator.py  test_runner.py  test_scoring.py
